# decolor-metrics

./: .gitignore  AME.cpp  AME.h  CMakeLists.txt  DecolorMeasurer.cpp  DecolorMeasurer.h  decolor.cpp  decolor.h  main.cpp  main2.cpp  main_ame.cpp  main_method.cpp  main_new.cpp  metric-json.cpp
utils/: CMakeLists.txt  image_components.cpp  image_components.h  utils.cpp  utils.h
utils/gui/: CMakeLists.txt  precomp.hpp  window_QT.cpp  window_QT.h
